<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">

    <string name="app_name">CreditMapper</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="ok_button">OK</string>
    <string name="cancel_button">Cancel</string>
    <string name="cancel_search">Cancel</string>
    <string name="nextMessage_button">Next Message</string>
    <string name="search">Search</string>
    <string name="search_button">Search</string>
    <string name="back_button">Back</string>
    <string name="address1">Address</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zip">Zip</string>
    <string name="new_search">New Search</string>
    <string name="save_to_favorites">Save to Favorites</string>
    <string name="openCalculator_button">Calculator</string>
    <string name="map_message">Placeholder for Google Map</string>
    <string name="gps_enabled">GPS Enabled</string>
    <string name="gps_disabled">GPS Disabled</string>

    <string-array name="state_array">
        <item/>
        <item>Alabama - AL</item>
        <item>Alaska - AK</item>
        <item>Arizona - AZ</item>
        <item>Arkansas - AR</item>
        <item>California - CA</item>
        <item>Colorado - CO</item>
        <item>Connecticut - CT</item>
        <item>Delaware - DE</item>
        <item>Dist Of Columbia - DC</item>
        <item>Florida - FL</item>
        <item>Georgia - GA</item>
        <item>Hawaii - HI</item>
        <item>Idaho - ID</item>
        <item>Illinois - IL</item>
        <item>Indiana - IN</item>
        <item>Iowa - IA</item>
        <item>Kansas - KS</item>
        <item>Kentucky - KY</item>
        <item>Louisiana - LA</item>
        <item>Maine - ME</item>
        <item>Maryland - MD</item>
        <item>Massachusetts - MA</item>
        <item>Michigan - MI</item>
        <item>Minnesota - MN</item>
        <item>Mississippi - MS</item>
        <item>Missouri - MO</item>
        <item>Montana - MT</item>
        <item>Nebraska - NE</item>
        <item>Nevada - NV</item>
        <item>New Hampshire - NH</item>
        <item>New Jersey - NJ</item>
        <item>New Mexico - NM</item>
        <item>New York - NY</item>
        <item>North Carolina - NC</item>
        <item>North Dakota - ND</item>
        <item>Ohio - OH</item>
        <item>Oklahoma - OK</item>
        <item>Oregon - OR</item>
        <item>Pennsylvania - PA</item>
        <item>Rhode Island - RI</item>
        <item>South Carolina - SC</item>
        <item>South Dakota - SD</item>
        <item>Tennessee - TN</item>
        <item>Texas - TX</item>
        <item>Utah - UT</item>
        <item>Vermont - VT</item>
        <item>Virginia - VA</item>
        <item>Washington - WA</item>
        <item>West Virginia - WV</item>
        <item>Wisconsin - WI</item>
        <item>Wyoming - WY</item>
    </string-array>

</resources>